# ADASI_Test

./: .gitignore  CMakeLists.txt  README.md
Results/: point_1_no_overlay.webm  point_1_overlay_camera.webm  point_1_overlay_file.webm  point_2_3_dinamic_overlay_camera.webm  point_4_RTP_dinamic_overlay_file.webm  point_5_RTSP_RTP_dinamic_overlay_camera..webm
point_0/: CMakeLists.txt  point_0.cpp
point_0/include/: RTP_manager.cpp  RTP_manager.h  overlay_manager.h  pipeline_manager.h
point_0/src/: RTP_manager.cpp  overlay_manager.cpp  pipeline_manager.cpp
point_1/: CMakeLists.txt  point_1 copy 2.cpp  point_1 copy 3.cpp  point_1 copy.cpp  point_1.cpp
point_1/include/: RTSP_manager.h  pipeline_manager.h
point_1/src/: overlay_manager.cpp  pipeline_manager.cpp
point_2/: CMakeLists.txt  point_2 copy.cpp  point_2.cpp  point_2BackUp.cpp  point_2BackUp2.cpp  point_2soso.cpp
point_2_3/: CMakeLists.txt
point_2_3/include/: pipeline_manager.h
point_2_3/src/: overlay_manager.cpp  pipeline_manager.cpp
point_4/: CMakeLists.txt  point_4.cpp  point_42.cpp
point_4/include/: pipeline_manager.h
point_4/src/: pipeline_manager.cpp
point_5/: CMakeLists.txt  point_5.cpp  point_52_file.cpp  point_5_BackUp.cpp
point_5 copy/: CMakeLists.txt
point_5 copy/include/: RTSP_manager.h  pipeline_manager.h
point_5 copy/src/: RTSP_manager.cpp  pipeline_manager.cpp
point_5/include/: RTP_manager.h  RTSP_manager.h  overlay_manager.h
point_5/src/: RTP_manager.cpp  RTSP_manager.cpp  overlay_manager.cpp  pipeline_manager.cpp  point_5.cpp
point_5_back/: point_51.cpp  point_52_file.cpp  point_5_dummy.cpp
point_5_back/include/: pipeline_manager.h
point_5_back/src/: pipeline_manager copy.cpp  pipeline_manager.cpp
point_6/: CMakeLists.txt  point_6 copy 2.cpp  point_6.cpp
point_6/src/: overlay_manager.cpp  pipeline_manager.cpp
